@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = cocos2d-iphone
-PROJECT_NUMBER         = 0.4.2
+PROJECT_NUMBER         = 0.4.3
 OUTPUT_DIRECTORY       = /Users/riq/progs/cocos2d-iphone/trunk
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
